--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -381,6 +381,11 @@ label[for='toggle-all'] {
 
 #info a {
 	color: inherit;
+  cursor: pointer;
+}
+
+#info a:hover {
+  text-decoration: underline;
 }
 
 /*
@@ -411,4 +416,8 @@ label[for='toggle-all'] {
 
 .hidden{
 	display:none;
+}
+
+.share-modal-wrapper.open {
+  background: rgba(0, 0, 0, 0.3);
 }
