--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -33,4 +33,7 @@
  
 <footer id="info">
   <p>Double-click to edit a todo</p>
+  <p><a {{action 'share'}}>Click here to share this document</a></p>
 </footer>
+
+{{share-modal open-when=isSharing}}
