Cleaned up login code
Resolves #17

* removed empty options objects (they are now optional)
* deleted unused login controller (will be re-added later)
* removed unused userId parameter from login action

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -4,7 +4,7 @@
 
 		<div class="login_body">
 			<p>
-				<button {{action 'login' requestedUserID}} class="login_button">
+				<button {{action 'login'}} class="login_button">
 					<span class="fa fa-google-plus"></span> 
 					Login with Google
 				</button>
