--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -4,7 +4,7 @@
 
 		<div class="login_body">
 			<p>
-				<button {{action 'login'}} class="login_button">
+				<button {{action 'authenticate'}} class="login_button">
 					<span class="fa fa-google-plus"></span> 
 					Login with Google
 				</button>
