Added error template, controller and styles
The error template shows a logout button if the error is due to access rights, or an error stack otherwise, similar to how Storypad handles it.
A simple css class for the error link has also been added.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -391,3 +391,8 @@ label[for='toggle-all'] {
   position: relative;
   font-family: 'Open Sans', sans-serif;
 }
+
+.logout-link {
+  text-decoration: underline;
+  cursor: pointer;
+}
