--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
   <a href="https://drive.google.com" class="btn btn-default btn-lg home-button">Go to Google Drive</a>
 {{else}}
   <h4 class="col-md-4 col-md-offset-4" style="text-align: center;">
-      <button type="button" class="btn btn-default btn-lg home-button" {{action 'login'}}>
+      <button type="button" class="login_button" {{action 'login'}}>
           <span>Login with Google</span>
       </button>
   </h4>
