--- a/app/templates/tasks/index.hbs
+++ b/app/templates/tasks/index.hbs
@@ -2,7 +2,7 @@
   {{#each task in model itemController='task'}}
   <li {{bind-attr class="task.isCompleted:complete task.isEditing:editing" }}>
     {{#if task.isEditing}}
-      {{input class="edit" value=task.title focus-out="acceptChanges" insert-newline="acceptChanges" autofocus="autofocus"}}
+      {{input class="edit" value=task.newTitle focus-out="acceptChanges" insert-newline="acceptChanges" escape-press="discardChanges" autofocus="autofocus"}}
     {{else}}
       {{input type="checkbox" checked=task.isCompleted class="toggle"}}
       <label {{action 'edit' on='doubleClick'}}>{{task.title}}</label>
