--- a/app/templates/tasks/index.hbs
+++ b/app/templates/tasks/index.hbs
@@ -1,6 +1,6 @@
 <ul id="todo-list">
   {{#each task in model itemController='task'}}
-  <li {{bind-attr class="task.isCompleted:complete task.isEditing:editing" }}>
+  <li class="{{if task.isCompleted 'complete'}} {{if task.isEditing 'editing' }}">
     {{#if task.isEditing}}
       {{input class="edit" value=task.newTitle focus-out="acceptChanges" insert-newline="acceptChanges" escape-press="discardChanges" autofocus="autofocus"}}
     {{else}}
@@ -8,7 +8,7 @@
       <label {{action 'edit' on='doubleClick'}}>{{task.title}}</label>
       <button class="destroy" {{action 'delete'}}></button>
     {{/if}}
-    
+
   </li>
   {{/each}}
 </ul>
